--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ twitter: kxnikx
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: kanika-narang-5b6a77141
 # youtube: myyoutube
 # spotify: myspotify
 github: narangkanika
